--- a/FG.css
+++ b/FG.css
@@ -6,24 +6,55 @@ body{
 table{
     text-shadow: -10px 10px 10px #000;
     border: 2px solid #000;
-    width: 300px;
+    width: 200px;
     margin: 4%;
+    display: contents;
+    float: left;
+    border-radius: 10px 10px 10px ;
+    font-weight: bold;
+    display: block;
     box-shadow:inset 5px 5px 5px #000;
     
 }
 td{
     text-shadow: -1px 1px 1px #000;
-    border: 2px solid #000;
+
     box-shadow:inset 5px 5px 5px #000;
     text-shadow: 10px 10px 10px #000;
 }
 .container{
     background-color: rgb(157, 157, 192);
     color: #000000;
+    width: 450px;
+    text-align: center;
+    border-radius: 10px 10px 10px ;
+    border: 3px solid red;
    
 }
 tr.btn{
     background-color: chartreuse;
     text-shadow: 10px 10px 10px #000;
+   
   
 }
+.btn td{
+    width: 500px;
+}
+.item-2{
+    background-color: cadetblue;
+}
+.item-3{
+    background-color: rgb(2, 5, 100);
+    color: aliceblue;
+}
+.item-4{
+    background-color: rgb(6, 234, 242);
+}
+.item-5{
+    background-color: rgb(236, 12, 12);
+}
+td{
+    border: solid;
+}
+
+ 
