--- a/cf.css
+++ b/cf.css
@@ -1,18 +1,19 @@
 body{
-    background-color: blueviolet;
+    background-color: rgb(29, 13, 45);
+   
 }
 h1{
-    color: #680303;
+    color: red;
     text-shadow: -20px 20px 20px #000;
-    margin: 20px;
+    margin: 10px;
 }
 h2{
-    color: #180269;
+    color: #ffffff;
     text-shadow: -10px 10px 10px #000;
     margin: 20px;
 }
 h3{
-    color: rgb(5, 0, 0);
+    color: rgb(246, 246, 246);
     text-shadow: -10px 10px 10px #000;
     margin: 20px;
 
@@ -23,22 +24,24 @@ p{
     margin: 30px;
 }
 table{
-    border: 1px solid #000;
-    width: 300px;
-    padding: 5px;margin: 7%;
+    border: 4px solid #ffffff;
+    width: 400px;
+    display: flex box;
+    padding: 5px;
+    margin: 3%;
     box-shadow: 10px 10px 10px #000;
 }
 td.dado01{
     background-color: black;
-    color: aliceblue;
+    color: rgb(243, 21, 21);
     text-shadow: -1px 1px 1px  red;
     padding: 5px;
     box-shadow: 10px 10px 10px #000;
     border:2px  solid #00ffff;
 }
 td.dado02{
-    background-color: blue;
-    color: aliceblue;
+    background-color: rgb(247, 247, 251);
+    color: rgb(0, 0, 0);
     text-shadow: -1px 1px 1px  red;
     padding: 5px;
     box-shadow: 10px 10px 10px #000;
@@ -111,7 +114,7 @@ td.dado11{
     border: 3px solid #ff0000;
 }
 td.dado12{
-    background-color: indigo;
+    background-color: rgb(255, 255, 255);
     text-shadow: -1px 2px 3px #000;
     padding: 5px;
     box-shadow: 10px 10px 10px #000;
