--- a/style.css
+++ b/style.css
@@ -85,3 +85,17 @@ td.dado13{
     background-color: darkgrey;
     color: #000;
 }
+@media (max-width:800px) {
+    .form-group{
+    min-width: 100%;
+      width: 100% !important;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    form{
+        height: 450px;
+    }
+}
