--- a/cf.css
+++ b/cf.css
@@ -120,3 +120,17 @@ td.dado12{
     box-shadow: 10px 10px 10px #000;
     border: 2px solid #00ffff;
 }
+@media (max-width:800px) {
+    .form-group{
+    min-width: 100%;
+      width: 100% !important;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    form{
+        height: 450px;
+    }
+}
