--- a/FG.css
+++ b/FG.css
@@ -6,14 +6,16 @@ body{
 table{
     text-shadow: -10px 10px 10px #000;
     border: 2px solid #000;
-    width: 200px;
-    margin: 4%;
+    width: 300px;
     display: contents;
     float: left;
     border-radius: 10px 10px 10px ;
     font-weight: bold;
-    display: block;
     box-shadow:inset 5px 5px 5px #000;
+    margin: 1%;
+    display: block;
+    display: flex;
+    display: inline-table;
     
 }
 td{
