--- a/cf.css
+++ b/cf.css
@@ -25,11 +25,13 @@ p{
 }
 table{
     border: 4px solid #ffffff;
-    width: 400px;
-    display: flex box;
+    width: 300px;
     padding: 5px;
-    margin: 3%;
     box-shadow: 10px 10px 10px #000;
+    margin: 1%;
+    display: block;
+    display: flex;
+    display: inline-table;
 }
 td.dado01{
     background-color: black;
