--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@ tr.dado{
 table{
     border: 5px solid white;
     box-shadow: 10px 10px 10px #000;
-    width: 400px;
-    display: flex box;
+    width: 300px;
     padding: 5px;
     margin: 3%;
+    margin: 1%;
+    display: block;
+    display: flex;
+    display: inline-table;
 }
 td.linha{
  border: 8px solid red; 
