--- a/FG.css
+++ b/FG.css
@@ -25,7 +25,7 @@ td{
 .container{
     background-color: rgb(157, 157, 192);
     color: #000000;
-    width: 300px;
+    width: 400px;
     border-radius: 10px 10px 10px ;
     border: 3px solid red;
    
@@ -49,4 +49,85 @@ td{
 td{
     border: solid;
 }
+.item-5{
+    background-color: rgb(174, 121, 121);
+    
+}
+.item-6{
+    background-color: rgb(190, 7, 7);
+}
+.item-7{
+    background-color: rgb(142, 223, 10);
+}
+.item-8{
+    background-color: darkgreen;
 
+}
+.item-9{
+    background-color: chartreuse;
+}
+.item-10{
+    background-color: blanchedalmond;
+}
+.item-11{
+    background-color: darkkhaki;
+    
+}
+.item-12{
+   background-color: blue; 
+}
+.item-13{
+    background-color: #000000;
+    color: aliceblue;
+}
+.item-14{
+    background-color: crimson;
+}
+.item-15{
+    background-color: dimgray;
+}
+.item-16{
+    background-color: dodgerblue;
+}
+.item-17{
+    background-color: darkslategray;
+}
+.item-18{
+    background-color: burlywood;
+}
+.item-19{
+    background-color: cornflowerblue;
+}
+.item-20{
+    background-color: darkgreen;
+}
+.item-21{
+    background-color: deeppink;
+}
+.item-22{
+    background-color: darkslategrey;
+}
+.item-23{
+    background-color: deeppink;
+}
+.item-24{
+    background-color: greenyellow;
+}
+.item-25{
+    background-color: deeppink;
+}
+.item-26{
+    background-color: greenyellow;
+}
+.item-27{
+    background-color: deeppink;
+}
+.item-28{
+    background-color: greenyellow;
+}
+.item-29{
+    background-color: deeppink;
+}
+.item-30{
+    background-color: greenyellow;
+}
